Fix spacing on page title header.

--- a/frontend/src/assets/style.css
+++ b/frontend/src/assets/style.css
@@ -290,8 +290,6 @@ a:hover
 .page_title
 {
     padding-top: 5px;
-    padding-bottom: 20px;
-
 }
 
 h1
